# Medical-multi-agent-system

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.eval  README.md  deploy_qwen2_vl.py  docker-compose.eval.yml  docker-compose.stage4.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  config.py  graph.py  main.py  repository.py  schemas.py  state.py
app/agents/: __init__.py  auditor.py  image_analyst.py  lead_physician.py  (+1 more)
docs/: API_EXAMPLES.md  EVALUATION.md  MANUAL_CONFIGURATION.md
evaluation/: __init__.py  automatic.py  basic_metrics.py  config.example.json  dataset.py  error_injection.py  evidence.py  generation.py  human.py  io.py  models.py  reader_study.py  reporting.py  statistics.py
medical_multi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 001_init.sql
scripts/: aggregate_reader_study.py  apply_metadata_retrieval_template.py  build_auditor_challenges.py  check_evaluation_environment.py  create_reader_study.py  download_iu_xray.py  evaluate_reports.py  generate_evaluation_report.py  generate_lora_stage_from_records.py  generate_retrieval_lora_stage_from_records.py  ingest_knowledge.py  inspect_iu_xray.py  prepare_evaluation_cases.py  run_auditor_challenge.py  run_report_experiment.py  run_stage4_formal.sh  run_stage4_vision_rag_lora.py  stage4_real_pipeline.py  train_report_lora.py  validate_evaluation_manifest.py
tests/: test_auditor.py  test_config.py  test_evaluation_basic.py  test_evaluation_evidence.py  test_evaluation_human.py  test_evaluation_injection.py  test_iu_xray.py  test_ollama_client.py
(+5 files in other folders)
