[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-multi-agent"
version = "0.1.0"
description = "Four-agent medical imaging report drafting system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "langgraph>=0.2,<2",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "redis>=5,<7",
  "httpx>=0.27,<1",
  "pydicom>=3,<4",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.9,<1",
  "structlog>=24,<26"
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.6,<1"]
evaluation = [
  "pyarrow>=18,<24",
  "pandas>=2.2,<4",
  "numpy>=2,<3",
  "scipy>=1.13,<2",
  "scikit-learn>=1.5,<2",
  "radeval==2.2.1",
  "bitsandbytes>=0.45,<1",
  "peft>=0.14,<1",
  "transformers>=4.48,<5",
  "accelerate>=1,<2"
]

[tool.setuptools.packages.find]
include = ["app*", "evaluation*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
